--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Stripe | Financial infrastructure to Grow Your Revenue</title>
   </head>
-  <body></body>
+  <body>
+
+
+    
+  </body>
 </html>
