header/menu done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,58 @@
     <link rel="shortcut icon" type="x-icon" href="./media/Logo-Stripe.webp" />
     <link rel="stylesheet" href="./style.css" />
     <title>Stripe | Financial infrastructure to Grow Your Revenue</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="first-section">
+      <header>
+        <div class="container">
+          <div class="menu">
+            <div class="menu-items">
+              <div class="logo">
+                <img alt="logo" src="./media/logo.svg" />
+              </div>
+              <ul>
+                <ul>
+                  <li><a href="#">Products</a></li>
+                  <li><a href="#">Solutions</a></li>
+                  <li><a href="#">Developers</a></li>
+                  <li><a href="#">Resources</a></li>
+                  <li><a href="#">Pricing</a></li>
+                </ul>
+              </ul>
+            </div>
+            <div class="menu-buttons">
+              <div class="ghost-button">
+                <button>
+                  Contact sales
+                  <img alt="icon" src="./media/ghost-icon.svg" />
+                </button>
+              </div>
+              <div class="normal-button">
+                <button>
+                  Sign in
+                  <img alt="icon" src="./media/normal-icon.svg" />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <div class="container">
+        <div class="first-section-hero">
+          <div class="left-side">
+            <h1>Financial infrastructure for the internet</h1>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
