updated new files

--- a/index.html
+++ b/index.html
@@ -60,5 +60,119 @@
         </div>
       </div>
     </div>
-  </body>
+
+
+
+<!-- avto's part -->
+  <div class="avto-first-page">
+    <div class="first-content">
+        <div class="first-element"><h5>Global Scale</h5></div>
+        <div class="second-element"><h2>The backbone for <br>
+            global commerce</h2>
+        </div>
+        <div class="third-element">
+            <p>Stripe makes moving money as easy and
+            programmable as moving data. Our teams are
+            based in offices around the world and we process
+            hundreds of billions of dollars each year for
+            ambitious businesses of all sizes.</p>
+        </div>
+        <div class="bottom-four-elements">
+            <div class="stat-item">
+                <span class="vertical-line"></span>
+                <div>
+                    <h2>250M +</h2>
+                    <p class="bottom-text">API requests per day, peaking at
+                        13,000 requests a second</p>
+                </div>
+             </div>
+             <div class="stat-item">
+                <span class="vertical-line"></span> 
+                <div>
+                    <h2>99.999%</h2>
+                    <p class="bottom-text">Historical uptime for <a href="https://status.stripe.com/">Stripe Services</a></p>
+                </div>
+            </div>
+                <div class="stat-item">
+                    <span class="vertical-line"></span> 
+                    <div>
+                        <h2>90%</h2>
+                        <p class="bottom-text">of U.S. adults have bought from
+                            businesses using Stripe.</p>
+                        </div>
+                    </div>
+                <div class="stat-item">
+                        <span class="vertical-line"></span> 
+                    <div>
+                        <h2>135+</h2>
+                        <p class="bottom-text">currencies and payment
+                            methods supported.</p>
+                    </div>
+                    </div>
+        </div>
+    </div>
+</div>
+<div class="section-2">
+    <h3>Enterprise reinvention</h3>
+    <h1>Bring agility to your enterprise</h1>
+    <p>You can use Stripe not only to accept payments but also to quickly support new markets,
+        upgrade existing systems and tools, go direct-to-consumer, and engage customers with
+        subscriptions and marketplaces. Get expert integration guidance from our <a href="https://stripe.com/professional-services">Professional Services</a> and  <a href="https://stripe.com/partners">Certified Partners</a> so you can see value with Stripe faster.</p>
+
+
+        <!-- need to work on that later -->
+    <button><span class="button-info">Contact sales</span> <img src="./media/button-mark.png" alt="button image"></button>
+</div>
+<div class="container-section2">
+<div class="section-3">
+    <div class="section2-main">
+        <span class="vertical-line-4"></span> 
+        <div>
+            <h1>Millions</h1>
+            <p>BMW owners using
+                ConnectedDrive Store</p>
+        </div>
+    </div>
+    <div class="section2-main section-2-second">
+        <span class="vertical-line-4"></span>
+        <div class="section-2-middle">
+            <h1>350+</h1>
+            <p>US dealerships</p>
+        </div>
+    </div>
+
+    <div class="section2-main-1"> 
+        <div>
+            <span class="vertical-line-3"></span>
+        </div>
+        <div>
+            <h3>Products used</h3>
+            <div class="company-logos"><img src="./media/SVG.png" alt="company logo">
+                <p>Payments</p></div>
+        <div class="company-logos">
+            <img src="./media/SVG (1).png" alt="company logo">
+            <p>Connect</p>
+    </div>
+        </div>
+    </div>
+</div>
+<div class="bmw-picture">
+    <img src="./media/BMW.png" alt="M=BMW car">
+</div>
+</div>
+
+<div class="colored-line">
+  <span class="line-section blue"></span>
+  <span class="line-section yellow"></span>
+  <span class="line-section green"></span>
+  <span class="line-section red"></span>
+</div>
+<div class="logos">
+  <img src="./media/BMW_logo_(gray).svg.png" alt="bmw logo" class="first-logo">
+  <img src="./media/pngimg.com - amazon_PNG28.png" alt="amazon logo" class="second-logo">
+  <img src="./media/Vector.png" alt="">
+  <img src="./media/markex.png" alt="">
+</div>
+
+</body>
 </html>
