--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               <div class="ghost-button">
                 <button>
                   Contact sales
-                  <img alt="icon" src="./media/ghost-icon.svg" />
+                  <img alt="icon" src="./media/arrow-icon.svg" />
                 </button>
               </div>
               <div class="normal-button">
                 <button>
                   Sign in
-                  <img alt="icon" src="./media/normal-icon.svg" />
+                  <img alt="icon" src="./media/arrow-orange-icon.svg" />
                 </button>
               </div>
             </div>
@@ -54,8 +54,28 @@
       <div class="container">
         <div class="first-section-hero">
           <div class="left-side">
-            <h1>Financial infrastructure for the internet</h1>
-            <p></p>
+            <div class="content">
+              <h1>Financial infrastructure for the internet</h1>
+              <p>
+                Millions of companies of all sizes use Stripe online and in
+                person to accept payments, send payouts, automate financial
+                processes, and ultimately grow revenue.
+              </p>
+            </div>
+
+            <div class="left-side-buttons">
+              <div class="black-button">
+                <button>
+                  Start now <img alt="icon" src="./media/arrow-icon.svg" />
+                </button>
+              </div>
+              <div class="second-ghost-button">
+                <button>Contact sales</button>
+              </div>
+              <div class="black-arrow">
+                <img src="./media/black-arrow.svg" alt="icon" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
