adding small features

--- a/index.html
+++ b/index.html
@@ -63,7 +63,161 @@
 
 
 
-<!-- avto's part -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- avto's part -->
   <div class="avto-first-page">
     <div class="first-content">
         <div class="first-element"><h5>Global Scale</h5></div>
@@ -123,6 +277,7 @@
         <!-- need to work on that later -->
     <button><span class="button-info">Contact sales</span> <img src="./media/button-mark.png" alt="button image"></button>
 </div>
+
 <div class="container-section2">
 <div class="section-3">
     <div class="section2-main">
@@ -174,5 +329,10 @@
   <img src="./media/markex.png" alt="">
 </div>
 
+<!-- page 3 of Avto -->
+
+
+
+<!-- the end of Avto's part -->
 </body>
 </html>
