feature payments done!

--- a/index.html
+++ b/index.html
@@ -119,36 +119,52 @@
           <div class="modular-solutions">
             <div class="info">
               <h6>Modular solutions</h6>
-              <h2>A fully integrated suite of financial and payments products</h2>
+              <h2>
+                A fully integrated suite of financial and payments products
+              </h2>
               <p>
-                Reduce costs, grow revenue, and run your business more efficiently
-                on a fully integrated platform. Use Stripe to handle all of your
-                payments-related needs, manage revenue operations, and launch (or
-                invent) new business models.
-              </p>
-            </div>
-            <div class="info-img"><img src="./media/bank-cards.svg" /></div>
-          </div>
-  
-  
-  
-          <div class="modular-solutions">
-            <div class="info">
-              <h6>Modular solutions</h6>
-              <h2>A fully integrated suite of financial and payments products</h2>
-              <p>
-                Reduce costs, grow revenue, and run your business more efficiently
-                on a fully integrated platform. Use Stripe to handle all of your
-                payments-related needs, manage revenue operations, and launch (or
-                invent) new business models.
+                Reduce costs, grow revenue, and run your business more
+                efficiently on a fully integrated platform. Use Stripe to handle
+                all of your payments-related needs, manage revenue operations,
+                and launch (or invent) new business models.
               </p>
             </div>
             <div class="info-img"><img src="./media/bank-cards.svg" /></div>
           </div>
         </div>
-        
-
-
+        <div class="feature-wrapper">
+          <div class="feature-preview">
+            <div class="header-icon">
+              <img src="./media/payments-icon.svg" />
+              <p>Payments</p>
+            </div>
+            <div class="text-info">
+              <h3>Accept and optimize payments, globally</h3>
+              <p>
+                Increase authorization rates, optimize your checkout conversion,
+                and offer local payment methods in every market.
+              </p>
+            </div>
+            <div class="feature-button">
+              <button>
+                Start with Payments
+                <img src="./media/arrow-icon.svg" />
+              </button>
+            </div>
+            <div class="see-also">
+              <h5>See also</h5>
+              <div class="list">
+                <p><a href="#" class="tax">Tax</a> for automating sales tax and VAT</p>
+                <p><a href="#" class="radar">Radar</a> for fraud prevention and management</p>
+                <p><a href="#" class="terminal">Terminal</a> for custom in-person payments</p>
+              </div>
+              
+            </div>
+          </div>
+          <div class="feature-main-img">
+            <img src="./media/payments.svg" />
+          </div>
+        </div>
       </div>
     </div>
 
