feature billing done!

--- a/index.html
+++ b/index.html
@@ -154,17 +154,70 @@
             <div class="see-also">
               <h5>See also</h5>
               <div class="list">
-                <p><a href="#" class="tax">Tax</a> for automating sales tax and VAT</p>
-                <p><a href="#" class="radar">Radar</a> for fraud prevention and management</p>
-                <p><a href="#" class="terminal">Terminal</a> for custom in-person payments</p>
+                <p>
+                  <a href="#" class="tax">Tax</a> for automating sales tax and
+                  VAT
+                </p>
+                <p>
+                  <a href="#" class="radar">Radar</a> for fraud prevention and
+                  management
+                </p>
+                <p>
+                  <a href="#" class="terminal">Terminal</a> for custom in-person
+                  payments
+                </p>
               </div>
-              
             </div>
           </div>
           <div class="feature-main-img">
             <img src="./media/payments.svg" />
           </div>
         </div>
+      <div class="billing">
+
+     
+        <div class="feature-wrapper">
+          <div class="feature-preview">
+            <div class="header-icon">
+              <img src="./media/billing-icon.svg" />
+              <p>Billing</p>
+            </div>
+            <div class="text-info">
+              <h3>Capture recurring revenue</h3>
+              <p>
+                Support recurring business models, minimize churn, and automate
+                finance operations.
+              </p>
+            </div>
+            <div class="feature-button">
+              <button>
+                Start with Billing
+                <img src="./media/arrow-icon.svg" />
+              </button>
+            </div>
+            <div class="see-also">
+              <h5>See also</h5>
+              <div class="list">
+                <p>
+                  <a href="#" class="tax">Invoicing</a> for invoice creation,
+                  collection, and tracking
+                </p>
+                <p>
+                  <a href="#" class="radar">Revenue Recognition</a> for
+                  streamlined accrual accounting
+                </p>
+                <p>
+                  <a href="#" class="terminal">Sigma</a> for custom revenue
+                  reports
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="feature-main-img">
+            <img src="./media/billing.svg" />
+          </div>
+        </div>
+      </div>
       </div>
     </div>
 
