feature issuing and connect Done!

--- a/index.html
+++ b/index.html
@@ -170,54 +170,137 @@
             </div>
           </div>
           <div class="feature-main-img">
-            <img src="./media/payments.svg" />
+            <img src="./media/payment.svg" />
           </div>
         </div>
-      <div class="billing">
-
-     
-        <div class="feature-wrapper">
-          <div class="feature-preview">
-            <div class="header-icon">
-              <img src="./media/billing-icon.svg" />
-              <p>Billing</p>
-            </div>
-            <div class="text-info">
-              <h3>Capture recurring revenue</h3>
-              <p>
-                Support recurring business models, minimize churn, and automate
-                finance operations.
-              </p>
-            </div>
-            <div class="feature-button">
-              <button>
-                Start with Billing
-                <img src="./media/arrow-icon.svg" />
-              </button>
-            </div>
-            <div class="see-also">
-              <h5>See also</h5>
-              <div class="list">
+        <div class="billing">
+          <div class="feature-wrapper">
+            <div class="feature-preview">
+              <div class="header-icon">
+                <img src="./media/billing-icon.svg" />
+                <p>Billing</p>
+              </div>
+              <div class="text-info">
+                <h3>Capture recurring revenue</h3>
                 <p>
-                  <a href="#" class="tax">Invoicing</a> for invoice creation,
-                  collection, and tracking
-                </p>
-                <p>
-                  <a href="#" class="radar">Revenue Recognition</a> for
-                  streamlined accrual accounting
-                </p>
-                <p>
-                  <a href="#" class="terminal">Sigma</a> for custom revenue
-                  reports
+                  Support recurring business models, minimize churn, and
+                  automate finance operations.
                 </p>
               </div>
+              <div class="feature-button">
+                <button>
+                  Start with Billing
+                  <img src="./media/arrow-icon.svg" />
+                </button>
+              </div>
+              <div class="see-also">
+                <h5>See also</h5>
+                <div class="list">
+                  <p>
+                    <a href="#" class="tax">Invoicing</a> for invoice creation,
+                    collection, and tracking
+                  </p>
+                  <p>
+                    <a href="#" class="radar">Revenue Recognition</a> for
+                    streamlined accrual accounting
+                  </p>
+                  <p>
+                    <a href="#" class="terminal">Sigma</a> for custom revenue
+                    reports
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="feature-main-img">
+              <img src="./media/billing.svg" />
             </div>
           </div>
-          <div class="feature-main-img">
-            <img src="./media/billing.svg" />
+        </div>
+        <div class="conect">
+          <div class="feature-wrapper">
+            <div class="feature-preview">
+              <div class="header-icon">
+                <img src="./media/conect-icon.svg" />
+                <p>Connect</p>
+              </div>
+              <div class="text-info">
+                <h3>Set up multiparty payments and payouts</h3>
+                <p>
+                  Integrate payments into your platform or marketplace for
+                  end-to-end payments experiences.
+                </p>
+              </div>
+              <div class="feature-button">
+                <button>
+                  Start with Connect
+                  <img src="./media/arrow-icon.svg" />
+                </button>
+              </div>
+              <div class="see-also">
+                <h5>See also</h5>
+                <div class="list">
+                  <p>
+                    <a href="#" class="tax"> Terminal</a> for custom in-person
+                    payments
+                  </p>
+                  <p>
+                    <a href="#" class="radar">Instant</a> Payouts for fast
+                    payments to users
+                  </p>
+                  <p>
+                    <a href="#" class="terminal">Payment</a>
+                    Elements for customizable UIs
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="feature-main-img">
+              <img src="./media/conect.svg" />
+            </div>
           </div>
         </div>
-      </div>
+        <div class="issuing">
+          <div class="feature-wrapper">
+            <div class="feature-preview">
+              <div class="header-icon">
+                <img src="./media/issuing-icon.svg" />
+                <p>Issuing</p>
+              </div>
+              <div class="text-info">
+                <h3>Build a fintech offering with banking-as-a-service</h3>
+                <p>
+                  Launch, manage, and scale a commercial card program without
+                  any setup fees.
+                </p>
+              </div>
+              <div class="feature-button">
+                <button>
+                  Start with Issuing
+                  <img src="./media/arrow-icon.svg" />
+                </button>
+              </div>
+              <div class="see-also">
+                <h5>See also</h5>
+                <div class="list">
+                  <p>
+                    <a href="#" class="tax">Treasury</a> for financial accounts
+                  </p>
+                  <p>
+                    <a href="#" class="radar">Capital</a> for offering fast,
+                    flexible financing
+                  </p>
+                  <p>
+                    <a href="#" class="terminal">Connect </a>
+                    for powering platform payments
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="feature-main-img">
+              <img src="./media/issuing.svg" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
