adding 4 div section

--- a/index.html
+++ b/index.html
@@ -291,5 +291,66 @@
       <img src="./media/Vector.png" alt="" />
       <img src="./media/markex.png" alt="" />
     </div>
+
+<div class="first-part-of-4divs">
+  <h3>Built for growth</h3>
+  <h1>Take your startup farther, faster</h1>
+  <p>Startups build on Stripe to launch faster, adapt as they grow, and automate
+    workflows to do more with less. Build your own API-based integration or use our
+    low- to no-code solutions, which are simple enough for easy implementation and
+    powerful enough to scale as fast and as far as you need.</p>
+</div>
+
+<!-- 4 div section(atlas,checkout...) -->
+  <div class="startup">
+    <div class="start-up-1">
+    <div class="second-divs">
+      <div class="checkout">
+       <img src="./media/atlas-2-resized.png" alt="" class="atlas-1">
+      </div>
+      <img src="./media/atlas.png" alt="atlas logo"> 
+      <h2>Incorporate your company</h2>
+          <p>Launch a B2C business with a prebuilt payment
+            page that’s optimized for conversion.</p>
+            <a href="#" class="hover-button">Learn About Atla</a>
+    </div>
+  <div class="second-divs">
+    <div class="checkout">
+     <img src="./media/checkout2.png" alt="">
+    </div>
+    <img src="./media/checkout.png" alt="checkout logo" class="logoch">
+    <h2>Sell to consumers</h2>
+        <p>Launch a B2C business with a prebuilt payment
+          page that’s optimized for conversion.</p>
+          <a href="#" class="hover-button">Start with checkout</a>
+  </div>
+</div>
+
+<div>
+  <div class="third-divs">
+    <div class="checkout-1">
+     <img src="./media/div-4-3-fixed.png" alt="">
+    </div>
+    <img src="./media/payment.png" alt="payment">
+    <h2>Validate your idea</h2>
+        <p>Test your product idea by launching payments
+          with little to no code.</p>
+          <a href="#" class="hover-button">Try Payment links</a>
+  </div>
+   <div class="third-divs">
+    <div class="checkout-1">
+     <img src="./media/resized_image.png" alt="">
+    </div>
+    <img src="./media/invoice.png" alt="checkout logo" class="logoch">
+    <h2>Validate your idea</h2>
+        <p>Test your product idea by launching payments
+          with little to no code.</p>
+          <a href="#" class="hover-button">Explore invocing</a>
+          
+  </div>
+</div>
+</div>
+</div>
+    
   </body>
 </html>
