--- a/index.html
+++ b/index.html
@@ -503,6 +503,54 @@
 </div>
 </div>
 </div>
-    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="low-nocode-wrapper">
+  <div class="container">
+    <div class="low-nocode">
+      <div class="low-nocode-info">
+        <h4>Launch with ease</h4>
+       <h5>Low- and no-code options for
+        getting started</h5>
+        <p>If you'd like to use Stripe for your business but don't have developers on staff, no
+          problem. We have a few options depending on your needs.</p>
+      </div>
+    </div>
+    <div class="low-nocode-cards">
+      <div class="first-card">
+        <img src="./media/first-card-img.svg"/>
+        <div class="card-info">
+          <h6>Use a pre-integrated
+            platform</h6>
+            <p>Explore our directory to find out-of-
+              the-box solutions that connect with
+              Stripe, such as <a href="#">Squarespace</a> and
+             <a href="#"> Lightspeed.</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+</div>
   </body>
 </html>
