second-card Done!

--- a/index.html
+++ b/index.html
@@ -536,20 +536,42 @@
           problem. We have a few options depending on your needs.</p>
       </div>
     </div>
-    <div class="low-nocode-cards">
-      <div class="first-card">
-        <img src="./media/first-card-img.svg"/>
-        <div class="card-info">
-          <h6>Use a pre-integrated
-            platform</h6>
-            <p>Explore our directory to find out-of-
-              the-box solutions that connect with
-              Stripe, such as <a href="#">Squarespace</a> and
-             <a href="#"> Lightspeed.</a></p>
-          </div>
+<div class="cards-wrapper">
+  <div class="low-nocode-cards">
+    <div class="first-card">
+      <img src="./media/first-card-img.svg"/>
+      <div class="card-info">
+        <h6>Use a pre-integrated
+          platform</h6>
+          <p>Explore our directory to find out-of-
+            the-box solutions that connect with
+            Stripe, such as <a href="#">Squarespace</a> and
+           <a href="#"> Lightspeed.</a></p>
         </div>
       </div>
     </div>
+  </div>
+
+
+  <div class="low-nocode-cards">
+    <div class="first-card">
+      <img src="./media/low-nocode-second.svg">
+      <div class="card-info">
+        <h6>Build with Stripe-
+          certified experts
+          </h6>
+          <p>Work with a Stripe consulting
+            partner that can integrate and
+            deploy Stripe solutions for you.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+</div>
     </div>
 </div>
   </body>
