--- a/index.html
+++ b/index.html
@@ -560,6 +560,9 @@
         -->
     <div class="low-nocode-wrapper">
       <div class="container">
+        <div class="design">
+          <img src="./media/design.png"/>
+        </div>
         <div class="low-nocode">
           <div class="low-nocode-info">
             <h4>Launch with ease</h4>
