adding last section of me

--- a/index.html
+++ b/index.html
@@ -498,7 +498,61 @@
         <p>Test your product idea by launching payments
           with little to no code.</p>
           <a href="#" class="hover-button">Explore invocing</a>
-          
+  </div>
+</div>
+</div>
+<div class="video-container">
+<div class="videox">
+<div class="designed-developers">
+  <h3>Designed for developers</h3>
+  <h1>Ship more quickly with
+    powerful and easy-to-use
+    APIs</h1>
+    <p>Save engineering time with unified payments
+      functionality. We obsess over the maze of gateways,
+      payments rails, and financial institutions that make up
+      the global economic landscape so that your teams can
+      build what you need on one platform.</p>
+      <button class="custom-button">Read the docs <span class="arrow">➤</button>
+</div>
+<div class="video">
+  <video class="video-player" autoplay loop muted>
+    <source src="./media/video1.mp4" type="video/mp4">
+</video>
+</div>
+</div>
+<div class="groupcontainers">
+  <div class="containers">
+    <img src="./media/resized_Container-1.png" alt="">
+    <span></span><h3>Use Stripe with your stack</h3>
+    <p>We offer client and server
+      libraries in everything from
+      React and PHP to .NET and iOS.</p>
+      <a href="">See libraries ></a>
+  </div>
+  <div class="containers">
+    <img src="./media/resized_container-2.png" alt="">
+    <h3>Try no-code options</h3>
+    <p>Customize and deploy
+      payments interfaces directly
+      from the Stripe Dashboard.</p>
+      <a href="">Explore no-codes ></a>
+  </div>
+  <div class="containers">
+    <img src="./media/resized_container-3.png" alt="">
+    <h3>Explore prebuilt integrations</h3>
+    <p>Connect Stripe to over a
+      hundred tools including Adobe,
+      Salesforce, and Xero.</p>
+      <a href="">Browse App Maketplace ></a>
+  </div>
+  <div class="containers">
+    <img src="./media/resized_container-4.png" alt="">
+    <h3>Build on Stripe Apps</h3>
+    <p>Create an app just for your team
+      or for the millions of businesses
+      on Stripe.</p>
+      <a href="">Learn About Apps ></a>
   </div>
 </div>
 </div>
