stripe-payments elements done!

--- a/index.html
+++ b/index.html
@@ -640,5 +640,59 @@
         </div>
       </div>
     </div>
+
+    <div class="stripe-payment-section">
+      <div class="container">
+        <div class="payment-wrapper">
+          <div class="stripe-payment-info">
+            <h1>Ready to get started?</h1>
+            <p>
+              Explore <a href="#"> Stripe Payments,</a> or create an account
+              instantly and start accepting payments. You can also contact us to
+              design a custom package for your business.
+            </p>
+            <div class="payment-info-wrap">
+              <button class="start">
+                Start now<img src="./media/arrow-icon.svg" />
+              </button>
+              <button class="contact">
+                Contact sales <img src="media/purple-arrow.svg" />
+              </button>
+            </div>
+          </div>
+          <div class="pricing-wrapper">
+            <div class="pricing-detalis">
+              <div class="pricing-img-wrap">
+                <img src="./media/payment-section-pricing2.svg" />
+                <img src="./media/payment-section-pricing.svg" />
+              </div>
+              <div class="pricing-info">
+                <h2>Always know what you pay</h2>
+                <p>Integrated per-transaction pricing with no hidden fees.</p>
+                <button class="contact">
+                  Pricing details <img src="media/purple-arrow.svg" />
+                </button>
+              </div>
+            </div>
+
+            <div class="pricing-detalis">
+              <div class="pricing-img-wrap">
+                <img width="56px" height="56px" src="./media/api-des.png" />
+              </div>
+              <div class="pricing-info">
+                <h2>Start your integration</h2>
+                <p>
+                  Get up and running with Stripe in as little as 10 minutes.
+                </p>
+                <button class="contact">
+                  API reference <img src="media/purple-arrow.svg" />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-detals"><img src="" /></div>
+    </div>
   </body>
 </html>
